fixed --time-gap bug

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   border-image-slice: 400;
   border-image-width: var(--step);
   border-image-repeat: repeat;
+  transition:/ width var(--time-gap) linear, height var(--time-gap) linear;
 }
 
 .score,
